<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/edit_profile"
            android:icon="@drawable/ic_baseline_edit_24px"
            android:title="@string/edit_profile" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_purchase_order"
            android:title="@string/puech_record" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_message"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_error_report"
            android:icon="@drawable/error_report"
            android:title="@string/send_error_report" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about_us"
            android:title="@string/about_us"/>

    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
