<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.BuyActivity"

    tools:showIn="@layout/activity_buy">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:animateLayoutChanges="true"
                android:background="@color/add_to_card"
                android:gravity="center"
                android:text="@string/your_address"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="visible" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.022">

                <TextView
                    android:id="@+id/txtState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/state"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.458"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.115" />

                <TextView
                    android:id="@+id/txtTown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/town"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.459"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtState"
                    app:layout_constraintVertical_bias="0.088" />

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/address"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.462"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTown"
                    app:layout_constraintVertical_bias="0.093" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/phone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.465"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtAddress"
                    app:layout_constraintVertical_bias="0.134" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:animateLayoutChanges="true"
                    android:background="#ab1faf"
                    android:gravity="center"
                    android:text="نحوه پرداخت"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.026"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.022">

                    <RadioButton
                        android:id="@+id/payOnline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="پرداخت وجه با کارت های شتاب"/>
                    <RadioButton
                        android:id="@+id/payَAtHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="پرداخت وجه به پیک"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:animateLayoutChanges="true"
                android:background="@color/bckg"
                android:gravity="center"
                android:text="@string/invoice_product"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_buy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:animateLayoutChanges="true"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/toatal_invoice"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtInvoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="2dp"
                    android:text="@string/total_buy" />

                <TextView
                    android:id="@+id/txtDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/discont" />

                <TextView
                    android:id="@+id/txtCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/shipp" />

                <TextView
                    android:id="@+id/totalBuyPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/pay"
                    android:textColor="@color/red" />


                <Button
                    android:id="@+id/Save_buy"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/save"
                    android:theme="@style/MyButton" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>